--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <string name="num_start">+91-</string>
     <string name="put_num">अपना फोन नंबर डालें !</string>
     <string name="send_otp">हम आपको 4 अंकों का ओटीपी भेजेंगे</string>
+    <string name="finding_your_details">आपकी जानकारी खोजी जा रही है</string>
+    <string name="enter_details">अपनी जानकारी दर्ज करें</string>
+    <string name="move_ahead">आगे बढ़ें</string>
+    <string name="name">नाम</string>
+    <string name="email">ईमेल</string>
 </resources>
